--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -9,9 +9,20 @@
 <body>
 <header>
 	
-	<img src="images/logo.png" alt="Manuxa logo">	
+	<div id="logo">
+	<img src="images/logo.png" alt="Manuxa logo">
+	</div>
+	
+	<div class="knapper">
+	<img src="images/speaker.png" alt="Højtaler">
+	<img src="images/fontsize.png" alt="Tekststørrelse">
+	
+	</div>
+		 
+	
 		<div class="menu"
 <ul>
+	
   	<a class="active" href="index.html">FORSIDE</a>
   	<a href="#news">TIPS OG TRICKS</a>
   	<a href="#contact">PRØV MANUXA</a>
@@ -21,7 +32,24 @@
 	</div>	
 </header>
 
+<div class="paalaeg">
+<img src="images/paalaeg.JPG" alt="Sådan åbner du en pakke pålæg med Manuxa">
+</div>
 
+<h1>Undgå træthed i hænder og håndled - prøv Manuxa</h1>
+
+<p>Manuxa er et hjælpemiddel til dig med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du være aktiv hele dagen og igen gøre de ting du har lyst til i hjemmet og i din fritid.
+</p>
+
+<footer>
+
+<p class="footertext">Manuxa ApS
+Jyllandsgade 30
+6400 Sønderborg
+73 70 90 92		
+</p>
+</div>
+</footer>
 
 </body>
 </html>
