--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href= "style.css">
+	<link rel="stylesheet" type="text/css" href= "../../Manuxa-master/Manuxa/style.css">
 	<meta charset="utf-8">
 	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse." </>
 <title>Manuxa - En lettere hverdag</title>
@@ -10,12 +10,12 @@
 <header>
 	
 	<div id="logo">
-	<img src="images/logo.png" alt="Manuxa logo">
+	<img src="../../Manuxa-master/Manuxa/images/logo.png" alt="Manuxa logo">
 	</div>
 	
 	<div class="knapper">
-	<img src="images/speaker.png" alt="Højtaler">
-	<img src="images/fontsize.png" alt="Tekststørrelse">
+	<img src="../../Manuxa-master/Manuxa/images/speaker.png" alt="Højtaler">
+	<img src="../../Manuxa-master/Manuxa/images/fontsize.png" alt="Tekststørrelse">
 	
 	</div>
 		 
@@ -23,7 +23,7 @@
 		<div class="menu"
 <ul>
 	
-  	<a class="active" href="index.html">FORSIDE</a>
+  	<a class="active" href="../../Manuxa-master/Manuxa/index.html">FORSIDE</a>
   	<a href="#news">TIPS OG TRICKS</a>
   	<a href="#contact">PRØV MANUXA</a>
   	<a href="#about">INTRODUKTIONSVIDEO</a>
@@ -33,7 +33,7 @@
 </header>
 
 <div class="paalaeg">
-<img src="images/paalaeg.JPG" alt="Sådan åbner du en pakke pålæg med Manuxa">
+<img src="../../Manuxa-master/Manuxa/images/paalaeg.JPG" alt="Sådan åbner du en pakke pålæg med Manuxa">
 </div>
 
 <h1>Undgå træthed i hænder og håndled - prøv Manuxa</h1>
