Store ændringer på siden
Jeg har tilføjet en del css og html. Flexboxet nogen kasser og sårn

--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -8,19 +8,18 @@
 </head>
 <body>
 <header>
-	
-	<div id="logo">
-	<img src="/images/logo.png" alt="Manuxa logo">
-	</div>
-	
-	<div class="knapper">
-	<img src="/images/speaker.png" alt="Højtaler">
-	<img src="/images/fontsize.png" alt="Tekststørrelse">
-	
+	<div class="Toplinje">
+	    <div id="logo2">
+	    <img src="images/logo.png" alt="Manuxa logo">
+	    </div>
+		<div class="ikon">
+	    <img id="hojtaler" src="images/speaker.png" alt="Højtaler"> 
+		<img id="Tekst" src="images/fontsize.png" alt="Tekststørrelse"> 
+		</div>
 	</div>
 		 
 	
-		<div class="menu"
+		<div class="menu">
 <ul>
 	
   	<a class="active" href="/index.html">FORSIDE</a>
@@ -33,23 +32,25 @@
 </header>
 
 <div class="paalaeg">
-<img src="/images/paalaeg.JPG" alt="Sådan åbner du en pakke pålæg med Manuxa">
+<img id="gap" src="images/paalaeg.JPG" alt="Sådan åbner du en pakke pålæg med Manuxa">
 </div>
-
+<div class="underbilled">
 <h1>Undgå træthed i hænder og håndled - prøv Manuxa</h1>
-
-<p>Manuxa er et hjælpemiddel til dig med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du være aktiv hele dagen og igen gøre de ting du har lyst til i hjemmet og i din fritid.
-</p>
-
-<footer>
-
-<p class="footertext">Manuxa ApS
-Jyllandsgade 30
-6400 Sønderborg
-73 70 90 92		
-</p>
+<p>Manuxa er et hjælpemiddel til dig med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du være aktiv hele dagen og igen gøre de ting du har lyst til i hjemmet og i din fritid.</p>
 </div>
-</footer>
+
+<div class="kasser"> 
+<div class="kass1">
+</div>
+<div class="kass2">
+</div>
+<div class="kass3">
+</div>
+</div>
+    <div class="footer">
+	<p1>Hej Din fucker det her er en footer</p1>
+	</div>
 
 </body>
+
 </html>
