Har tredobblet CSS og tilføjet endnu mere sjov og ballade
sjov

--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -22,11 +22,11 @@
 		<div class="menu">
 <ul>
 	
-  	<a class="active" href="/index.html">FORSIDE</a>
-  	<a href="#news">TIPS OG TRICKS</a>
-  	<a href="#contact">PRØV MANUXA</a>
-  	<a href="#about">INTRODUKTIONSVIDEO</a>
-  	<a href="#about">KONTAKT</a>	
+  	<a class="active" href="index.html">FORSIDE</a>
+  	<a href="faelleskab.html">FÆLLESKAB</a>
+  	<a href="manuxa.html">PRØV MANUXA</a>
+  	<a href="video.html">INTRODUKTIONSVIDEO</a>
+  	<a href="kontakt.html">KONTAKT</a>	
 </ul>	
 	</div>	
 </header>
