--- a/Manuxa/manuxa.html
+++ b/Manuxa/manuxa.html
@@ -3,25 +3,47 @@
 <head>
 	<link rel="stylesheet" type="text/css" href= "style.css">
 	<meta charset="utf-8">
-	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse." </>
+	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse."/>
 <title>Manuxa - En lettere hverdag</title>
 </head>
 <body>
 <header>
-	
-	<img src="images/logo.png" alt="Manuxa logo">	
-		<div class="menu"
+	<div class="Toplinje">
+	    <div id="logo2">
+	    <img src="images/logo.png" alt="Manuxa logo">
+	    </div>
+		<div class="ikon">
+	    <img id="hojtaler" src="images/speaker.png" alt="Højtaler"> 
+		<img id="Tekst" src="images/fontsize.png" alt="Tekststørrelse"> 
+		</div>
+	</div>
+<div class="menu">
 <ul>
-  	<a class="active" href="index.html">FORSIDE</a>
-  	<a href="#news">TIPS OG TRICKS</a>
-  	<a href="#contact">PRØV MANUXA</a>
-  	<a href="#about">INTRODUKTIONSVIDEO</a>
-  	<a href="#about">KONTAKT</a>	
+  	<a href="index.html">FORSIDE</a>
+  	<a href="faelleskab.html">FÆLLESKAB</a>
+  	<a class="active"  href="manuxa.html">PRØV MANUXA</a>
+  	<a href="video.html">INTRODUKTIONSVIDEO</a>
+  	<a href="kontakt.html">KONTAKT</a>	
 </ul>	
 	</div>	
 </header>
+	<h1 class="understreget"> Vejledning til at prøve Manuxa gratis i 14 dage </h1>
+
+<div class="flexpro">
+<div class="storboks">
+	<p class="ovs"> Udfyld kontaktformularen </p>
+	<p id="roedskrift"> Felter der er markeret med * er obligatorisk  </p>
+</div>	
+<div class="storboks2">
+</div>
+</div>
 
 
-
+  
+  
+   <div class="footer2">
+	<p>Hej Din fucker det her er en footer</p>
+	</div>
+	
 </body>
 </html>
