--- a/Manuxa/manuxa.html
+++ b/Manuxa/manuxa.html
@@ -33,8 +33,28 @@
 <div class="storboks">
 	<p class="ovs"> Udfyld kontaktformularen </p>
 	<p id="roedskrift"> Felter der er markeret med * er obligatorisk  </p>
+	<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">Skriv herunder dit navn og efternavn</label>
+    <input type="text" id="fname" name="firstname" placeholder="Navn">
+
+    <label for="lname">Skriv herunder dit telefonnummer</label>
+    <input type="text" id="lname" name="lastname" placeholder="Telefon nummer">
+
+    <label for="country">Skriv herunder e-mail hvis du har en</label>
+    <input type="text" id="pname" name="lastname" placeholder="E-mail">
+    
+
+    <label for="subject">Hvis du har ønske om hvornår og hvordan vi skal kontakte dig skriv herunder hvordan</label>
+    <textarea id="subject" name="subject" placeholder="Udfyld her" ></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
 </div>	
 <div class="storboks2">
+	<p class="ovs"> Kontakt os over telefon : 72 70 90 92 </p>
+	<p class="broedtekst">Hvis du har spørgsmål til Manuxa og hvordan armen fungere eller hvordan processen omkring at få armen fungere <br> så kontakt os på telefon og få en snak med en af vores professionelle. Vi er altid klar på at give dig den rigtige vejledning og de råd der giver mest mening for dig.</p>
 </div>
 </div>
 
