--- a/Manuxa/faelleskab.html
+++ b/Manuxa/faelleskab.html
@@ -4,7 +4,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<meta charset="utf-8">
 	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse."/>
-<title>Manuxa - En lettere hverdag</title>
+<title>Manuxa - Fællesskab</title>
 </head>
 <body>
 <header>
@@ -20,7 +20,7 @@
 <div class="menu">
 <ul>
   	<a href="index.html">FORSIDE</a>
-  	<a class="active" href="faelleskab.html">FÆLLESKAB</a>
+  	<a class="active" href="faelleskab.html">FÆLLESSKAB</a>
   	<a href="manuxa.html">PRØV MANUXA</a>
   	<a href="video.html">INTRODUKTIONSVIDEO</a>
   	<a href="kontakt.html">KONTAKT</a>	
@@ -45,7 +45,11 @@
    </div>  
     
     <div class="footer">
-	<p1>Hej Din fucker det her er en footer</p1>
+	<p1>Manuxa ApS
+Jyllandsgade 30
+6400 Sønderborg
+
+73 70 90 92</p1>
 	</div>
 	
 </body>
