--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -48,7 +48,14 @@
 </div>
 </div>
     <div class="footer">
-	<p1>Hej Din fucker det her er en footer</p1>
+    <br>
+	<p1>Manuxa ApS
+    <br>
+     Jyllandsgade 30
+     <br>
+     6400 Sønderborg
+     <br>
+     73 70 90 92</p1>
 	</div>
 
 </body>
