--- a/Manuxa/video.html
+++ b/Manuxa/video.html
@@ -3,25 +3,39 @@
 <head>
 	<link rel="stylesheet" type="text/css" href= "style.css">
 	<meta charset="utf-8">
-	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse." </>
-<title>Manuxa - En lettere hverdag</title>
+	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse." />
+<title>Manuxa - Introduktionsvideo til Manuxa</title>
 </head>
 <body>
 <header>
-	
-	<img src="images/logo.png" alt="Manuxa logo">	
-		<div class="menu"
+    <div class="Toplinje">
+	    <div id="logo2">
+	    <img src="images/logo.png" alt="Manuxa logo">
+	    </div>
+		<div class="ikon">
+	    <img id="hojtaler" src="images/speaker.png" alt="Højtaler"> 
+		<img id="Tekst" src="images/fontsize.png" alt="Tekststørrelse"> 
+		</div>
+	</div>
+<div class="menu">
 <ul>
-  	<a class="active" href="index.html">FORSIDE</a>
-  	<a href="#news">TIPS OG TRICKS</a>
-  	<a href="#contact">PRØV MANUXA</a>
-  	<a href="#about">INTRODUKTIONSVIDEO</a>
-  	<a href="#about">KONTAKT</a>	
+  	<a href="index.html">FORSIDE</a>
+  	<a href="faelleskab.html">FÆLLESSKAB</a>
+  	<a href="manuxa.html">PRØV MANUXA</a>
+  	<a  class="active" href="video.html">INTRODUKTIONSVIDEO</a>
+  	<a href="kontakt.html">KONTAKT</a>	
 </ul>	
 	</div>	
 </header>
 
 
 
+  <div class="footer2">
+	<p>Manuxa ApS
+Jyllandsgade 30
+6400 Sønderborg
+
+73 70 90 92</p>
+	</div>
 </body>
 </html>
