Mere indhold og sider
Haps haps

--- a/Manuxa/video.html
+++ b/Manuxa/video.html
@@ -27,7 +27,30 @@
 </ul>	
 	</div>	
 </header>
+<div class="vhs">
+	
+<div class="dvd">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SyNwQZSbEpE?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	</div>
 
+	</div>
+	<div class="bluray">
+	    
+	    <div class="vboks1">
+		<iframe width="250" height="175" src="https://www.youtube.com/embed/gJkzIuyQZkc?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+		
+		<div class="vboks2">
+		<iframe width="250" height="175" src="https://www.youtube.com/embed/4VK6HZdb5Ek?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		
+		</div> 
+		
+		<div class="vboks3">
+		<iframe width="250" height="175" src="https://www.youtube.com/embed/u068P7b4c3U?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		
+		</div>
+	
+	</div>
 
 
   <div class="footer2">
