--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -40,22 +40,33 @@
 </div>
 
 <div class="kasser"> 
-<div class="kass1">
-</div>
+<div class="kass1"> 
+  <img class="test1" src="images/Healthy-old-people-418201.png" width="420" height="175" alt="gigt"/> 
+	<p class="ovs">HALE – Et begreb du bør kende </p>
+	<p> Medicin kan holde os længere i live – men er det egentlig det vi vil? </p>
+	</div>
 <div class="kass2">
-</div>
+ <img class="test1" src="images/manuxa_-_grebsforst_rker.png" width="420" height="175" alt="manuxa"/> 
+  <p class="ovs">Prøv Manuxa </p>
+	  <p class="ovs"> Lær at leve med din gigt </p>
+	 </div>
+	  
+	  
 <div class="kass3">
-</div>
+  <img class="test1" src="images/training-older-people.png" width="420" height="175" alt="gamle gigt træning manuxa"/> 
+	<p class="ovs"> Lær at leve med gigt </p>
+  </div>
+	
 </div>
     <div class="footer">
     <br>
-	<p1>Manuxa ApS
+	<p>Manuxa ApS
     <br>
      Jyllandsgade 30
      <br>
      6400 Sønderborg
      <br>
-     73 70 90 92</p1>
+     73 70 90 92</p>
 	</div>
 
 </body>
