--- a/Manuxa/faelleskab.html
+++ b/Manuxa/faelleskab.html
@@ -57,11 +57,11 @@
    </div>  
     
     <div class="footer">
-	<p1>Manuxa ApS
+	<p>Manuxa ApS
 Jyllandsgade 30
 6400 Sønderborg
 
-73 70 90 92</p1>
+73 70 90 92</p>
 	</div>
 	
 </body>
