--- a/Manuxa/index.html
+++ b/Manuxa/index.html
@@ -40,23 +40,26 @@
 </div>
 
 <div class="kasser"> 
-<div class="kass1"> 
+<a class="linkclass" href="hale.html">
+ <div class="kass1"> 
   <img class="test1" src="images/Healthy-old-people-418201.png" width="420" height="175" alt="gigt"/> 
 	<p class="ovs">HALE – Et begreb du bør kende </p>
 	<p> Medicin kan holde os længere i live – men er det egentlig det vi vil? </p>
-	</div>
+	</div></a>
+
+<a class="linkclass" href="manuxa.html">
 <div class="kass2">
  <img class="test1" src="images/manuxa_-_grebsforst_rker.png" width="420" height="175" alt="manuxa"/> 
   <p class="ovs">Prøv Manuxa </p>
-	  <p class="ovs"> Lær at leve med din gigt </p>
+	  <p class="ovs"> Forbedre din livskvalitet </p>
 	 </div>
-	  
-	  
+	  </a>
+<a class="linkclass" href="leddegigt.html"> 	  
 <div class="kass3">
   <img class="test1" src="images/training-older-people.png" width="420" height="175" alt="gamle gigt træning manuxa"/> 
 	<p class="ovs"> Lær at leve med gigt </p>
   </div>
-	
+	</a>
 </div>
     <div class="footer">
     <br>
