--- a/Manuxa/leddegigt.html
+++ b/Manuxa/leddegigt.html
@@ -1,1 +1,62 @@
 <!doctype html>
+<html>
+<head>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<meta description="Manuxa er et hjælpemiddel til folk med gigt og andre former for nedsat gribefunktion. Med Manuxa kan du få en lettere hverdag, hvor almindelige huspligter ikke bliver en udfordring, men en fornøjelse."/>
+<title>Manuxa - En lettere hverdag</title>
+</head>
+<body>
+<header>
+	<div class="Toplinje">
+	    <div id="logo2">
+	    <img src="images/logo.png" alt="Manuxa logo">
+	    </div>
+		<div class="ikon">
+	    <img id="hojtaler" src="images/speaker.png" alt="Højtaler"> 
+		<img id="Tekst" src="images/fontsize.png" alt="Tekststørrelse"> 
+		</div>
+	</div>
+		 
+	
+		<div class="menu">
+<ul>
+	
+  	<a href="index.html">FORSIDE</a>
+  	<a href="faelleskab.html">FÆLLESKAB</a>
+  	<a href="manuxa.html">PRØV MANUXA</a>
+  	<a href="video.html">INTRODUKTIONSVIDEO</a>
+  	<a href="kontakt.html">KONTAKT</a>	
+</ul>	
+	</div>
+	<h1> Artikel - hvordan lærer jeg at leve med gigt? </h1>
+	<p class="rugbrod">Du er måske lige blevet diagnoseret med leddegigt eller slidgigt, og har svært ved tanken om at give slip på din uafhængighed? Bare rolig, selvom der nu er nogle flere ting du skal være ekstra opmærksom på, kan du sagtens få et nogenlunde normalt og trygt liv med gigt. I dette opslag, vil vi give dig nogle råd omkring hvordan du accepterer din nye diagnose og derfra arbejder videre med den.
+	<br>
+	<br>
+    Du er sikkert lidt bekymret og har en masse spørgsmål. Hvis du på er i tvivl om noget, så er det vigtigt at du kontakter din læge, da der spiller en masse faktorer ind som f.eks. hvilken slags gigt du har, din alder, din kropsbygning, dit køn og ikke mindst andre eventuelle diagnoser. Når du har snakket med din læge, burde du vide hvad der er vigtigst for dig, i forhold til hvordan du skal behandle hverdagen. 
+	<br>
+	<br>
+	Hvad gør du så derfra? Gigt er en kronisk sygdom, og går derfor desværre ikke væk. Men der er mange forskellige måder hvorpå, du kan lindre dine smerter, andet end medicin.
+	<br>
+	<br>
+	En meget god måde at bearbejde sin gigt på, er at dyrke let motion. Dette kan være være alt fra en kort løbetur til et par timer i et fitnesscenter, det vigtigste er bare at du lytter til din egen krop, og stopper med det samme du kan mærke at det bliver for meget. Når du dyrker motion, aktiverer du ikke kun dine led, du får også en god følelse indeni og får det godt med dig selv. 
+	<br>
+	<br>
+	Det er meget vigtigt, at du ikke lader din gigt gå ud over dit psykiske helbred. Lige nu kan det hele godt virke gråt og deprimerende, men så længe du har viljen til at få et bedre liv, kan du gøre det. Hvis du kan mærke, at du har brug for en at snakke med i forhold til dit mentale helbred pga af gigt, så er der ingen skam ved at kontakte en terapeut. 	
+	</p>	
+			
+</header>
+    <div class="footer">
+    <br>
+	<p>Manuxa ApS
+    <br>
+     Jyllandsgade 30
+     <br>
+     6400 Sønderborg
+     <br>
+     73 70 90 92</p>
+	</div>
+
+</body>
+
+</html>
